--- a/index.html
+++ b/index.html
@@ -491,3 +491,4 @@
 </body>
 </html>
 
+<link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Temu_logo.png/240px-Temu_logo.png">
