--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CUPONES Y CREDITOS GRATIS</title>
     <meta name="description" content="Cupones y créditos Temu México • Minimalista, profesional, fondo oscuro, código INA.">
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Temu_logo.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -490,5 +494,3 @@
 </script>
 </body>
 </html>
-
-<link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Temu_logo.png/240px-Temu_logo.png">
